[security-db-auth] FilterInvocationSecurityMetaaataSource 설정 (2), 페이지 연결

--- a/security-db-auth/src/main/resources/templates/home.html
+++ b/security-db-auth/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
             <div class="container text-center">
                 <h1 class="text-primary">DASHBOARD</h1>
                 <div class="security"></div>
-                <h1>Core Spring Security 에 오신 것을 환영합니다.</h1>
+                <h1>Core Spring Security</h1>
             </div>
         </div>
     </div>
